--- a/piece.html
+++ b/piece.html
@@ -8,9 +8,7 @@
 <meta name='link' content='o'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/cylindre.css'/>
-<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/piece.js'></script>
+<link rel='stylesheet' type='text/css' href='piece.css'/>
 <style type='text/css'>
 body {
 	perspective: 800px;
