--- a/pave.html
+++ b/pave.html
@@ -45,7 +45,7 @@ pave-simple, cylindre-simple {
 	background-size: contain;
 }
 pave-simple:before, pave-simple:after, pave-simple >*:nth-child(1), pave-simple >*:nth-child(1):before, pave-simple >*:nth-child(1):after,
-cylindre-simple:after, cylindre-simple >* {
+cylindre-simple:after, cylindre-simple >*, cylindre-simple >*:before, cylindre-simple >*:after {
 	/* valeurs par défaut à adapter */
 	width: inherit;
 	height: inherit;
@@ -95,13 +95,71 @@ cylindre-simple:after {
 	transform: translateZ(calc(-1* var(--depth)));
 	border-radius: 50%;
 }
-cylindre-simple >* {
+cylindre-simple-va >* {
+	transform-style: preserve-3d;
 	height: 6.5%;
 	width: var(--depth);
+	transform: translateZ(calc(-0.5* var(--depth))) rotateY(-90deg);
+	top: 46.75%;
+	left: 25%;
+}
+cylindre-simple >* {
 	transform-style: preserve-3d;
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg);
+	height: var(--depth);
+	width: 6.5%;
+	top: 25%;
+	left: 46.75%;
+	transform: translateZ(calc(-0.5* var(--depth))) translateY(100%) rotateX(-90deg) rotateY(45deg);
+}
+cylindre-simple >*:before, cylindre-simple >*:after {
+	width: 100%;
+	height: 100%;
+	top: 0;
+}
+cylindre-simple >*:before {
+	transform-origin: center left;
+	left: 100%;
+	transform: rotateY(7.5deg);
+}
+cylindre-simple >*:after {
+	transform-origin: center right;
+	left: -100%;
+	transform: rotateY(-7.5deg);
+}
+cylindre-simple-va >*:before {
+	transform-origin: top center;
+	top: 100%;
+	transform: rotateX(7.5deg);
+}
+cylindre-simple-va >*:after {
+	transform-origin: bottom center;
+	top: -100%;
+	transform: rotateX(-7.5deg);
 }
 /*
+cylindre-simple >*:nth-child(1) {
+	transform: translateZ(calc(-0.5* var(--depth))) rotateY(-90deg);
+	left: 75%;
+}
+cylindre-simple >*:nth-child(2) {
+	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg);
+	left: -25%;
+}
+cylindre-simple >*:nth-child(3) {
+	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg) rotateX(90deg);
+	top: 96.75%;
+	left: 25%;
+}
+cylindre-simple >*:nth-child(4) {
+	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg) rotateX(-90deg);
+	top: -3.25%;
+	left: 25%;
+}
+cylindre-simple >*:nth-child(5) {
+	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg) rotateX(-45deg);
+	top: 9.25%;
+	left: 12.5%;
+}
 	left: 25%;
 	transform: rotateY(90deg);
 cylindre-simple >*:nth-child(1){ transform: translateY(50%); }
@@ -122,7 +180,7 @@ cylindre-simple >*:nth-child(15){ transform: rotateZ(315deg) translateY(50%); }
 cylindre-simple >*:nth-child(16){ transform: rotateZ(337.5deg) translateY(50%); }
 */
 </style></head><body>
-<cylindre-simple>
+<cylindre-simple class='mesure'>
 	<p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></cylindre-simple>
 <pave-simple><p></p></pave-simple>
 </body></html>
