--- a/piece.html
+++ b/piece.html
@@ -23,6 +23,7 @@ piece {
 	animation-name: spin-room-vertical;
 	--plafond: transparent;
 }
+bol { --width: 2cm; }
 /*
 	animation: spin-horizontal 8s infinite alternate;
 	animation: spin-vertical 8s infinite alternate;
