--- a/rgaa-test/formulaire.html
+++ b/rgaa-test/formulaire.html
@@ -98,5 +98,7 @@
 			var message = 'option choisie: '+ checked.value;
 			result.innerHTML = message;
 	}}
+	pag = document.getElementsByTagName ('p')[0];
+	pag.addEventListener ('click', function (event){ console.log ('coucou'); });
 </script>
 </html>
