--- a/rgaa-test/lien.html
+++ b/rgaa-test/lien.html
@@ -12,6 +12,7 @@
 </head><body>
 	<h1>les liens</h1>
 	<a href='./index.html'>retour à l'index. lien classique</a>
+	<p role='link' href='./index.html'>retour à l'index via un paragraphe.</p>
 	<a>ancre simple</a>
 	<a href="">lien vide</a>
 	<a href='#'>lien #</a>
