--- a/rgaa-test/image.html
+++ b/rgaa-test/image.html
@@ -36,7 +36,7 @@
 	<h1>tester les images</h1>
 	<a href='./index.html'>retour à l'index</a>
 	<p>image sans source</p>
-	<img alt='image sans source'>
+	<img alt='image sans source' role='img'>
 	<p>image avec source vide</p>
 	<img alt='image avec source vide' src="">
 	<p>image sans alt</p>
