--- a/rgaa-test/image.html
+++ b/rgaa-test/image.html
@@ -113,5 +113,5 @@ String.prototype.isEmpty = function(){
 	else return false;
 }
 	const svg = document.getElementsByTagName ('svg')[1];
-	console.log (svg.textContent.isEmpty(), svg.textContent);
+//	console.log (svg.textContent.isEmpty(), svg.textContent);
 </script></body></html>
