--- a/rgaa-test/formulaire.html
+++ b/rgaa-test/formulaire.html
@@ -40,7 +40,7 @@
 	<label for='prenom'>prénom</label>
 	<input type='text' id='prenom' name='prenom' />
 	<label for='email'>couriel</label>
-	<input type='email' id='email' />
+	<input type='email' id='email' required />
 	<select>
 		<optgroup label='voyels'>
 		<option value='b'>option b</option>
