--- a/rgaa-test/image.html
+++ b/rgaa-test/image.html
@@ -51,6 +51,7 @@
 	<input type='image' src='https://lh3.googleusercontent.com/pw/AP1GczOT7pmJXrqv3kGhNKdNz94vGTfNx75GiyNx9ltDhL1Cvu_kcfbzIU_cQFsTDb7h164rRkck5suVWHpALAlI5zuSDuaWEs8hvv-I-mN2V3qAmVwOYytYIG57Vb75Tviv4nVHgej8bhRXVGpw9CCk4AHw=w800-h800-s-no-gm' alt='ma photo' />
 	<p>svg sans rôle</p>
 	<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'>
+		<title>svg sans rôle</title>
 		<ellipse id='corps' cx='36' cy='62' rx='20' ry='25'/><circle id='jambe-d' cx='12' cy='80' r='12'/>
 		<circle id='jambe-g' cx='60' cy='80' r='12'/><circle id='bras-d' cx='10' cy='50' r='10'/><circle id='bras-g' cx='62' cy='50' r='10'/>
 		<circle id='oreille-d' cx='18' cy='10' r='10'/><circle id='oreille-g' cx='54' cy='10' r='10'/><circle id='tete' cx='36' cy='20' r='18'/>
