--- a/rgaa-test/tabulation.html
+++ b/rgaa-test/tabulation.html
@@ -15,7 +15,6 @@
 [aria-describedby].aria-js:hover + [role='tooltip'], [aria-describedby].aria-js:focus + [role='tooltip'] { display: none; }
 </style></head><body>
 	<h1>l'enfer de la tabulation</h1>
-	<p>tester le fonctionnement de la tabulation.</p>
 	<a href='./index.html'>retour à l'index</a>
 	<section>
 		<div tabindex='1'>
@@ -68,8 +67,9 @@
 		<input type='submit' onclick='printShape()'/>
 	</form>
 	<p id='resultat'>répondez au questionnaire.</p>
+	<p title='première infobulle'>infobulle utilisant l'attribut title.</p>
 	<p tabindex='0' aria-describedby='description-aria'>paragraphe survolable avec une description aria. le block contenant la description doit obligatoirement suivre son référent.</p>
-	<p tabindex='0' id='description-aria' role='tooltip' aria-hidden='true'>je suis la description.</p>
+	<p id='description-aria' role='tooltip' aria-hidden='true'>je suis la description.</p>
 	<p tabindex='0' aria-describedby='description-js' class='aria-js'>paragraphe survolable dont l'infobulle est gérée par js.</p>
 	<p tabindex='0' id='description-js' role='tooltip' aria-hidden='true'>je suis la description gérée avec js.</p>
 <script type='text/javascript'>
@@ -119,24 +119,15 @@
 					tooltip.style.display = 'none';
 	}}}});
 	function showTooltip (event){
-		const tooltip = document.getElementById (event.target.getAttribute ('aria-describedby'));
-		tooltip.style.display = 'inline-block';
-		tooltip.focus();
-	}
+		const descId = event.target.getAttribute ('aria-describedby');
+		if (descId !== undefined){
+			const tooltip = document.getElementById (descId);
+			if (tooltip !== undefined){
+				if (tooltip.style.display === 'inline-block') tooltip.style.display = 'none';
+				else{
+					tooltip.style.display = 'inline-block';
+					tooltip.focus();
+	}}}}
 	var paragraphes = document.getElementsByClassName ('aria-js');
 	for (var p=0; p< paragraphes.length; p++) paragraphes[p].addEventListener ('click', showTooltip);
-	/*
-	var paragraphe = document.getElementById ('aria-js');
-	paragraphe.addEventListener ('focus', showTooltip);
-	*/
-	window.addEventListener ('click', function (event){
-/*		console.log (event.screenX, event.layerX, event.offsetX, event.pageX, event.x);
-		console.log ('page', event.pageX, event.pageY, document.elementFromPoint (event.pageX, event.pageY));
-		console.log ('coordonnée', event.x, event.y, document.elementFromPoint (event.x, event.y));
-		element.style.backgroundColor = 'lightgreen';
-		const element = document.elementFromPoint (event.x, event.y);
-		*/
-		const elements = document.elementsFromPoint (event.x, event.y);
-		console.log (elements);
-	});
 </script></body></html>
