--- a/pave.html
+++ b/pave.html
@@ -8,19 +8,19 @@
 <meta name='link' content='o'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/boule.css'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/cylindre.css'/>
-<link rel='stylesheet' type='text/css' href='bol.css'/>
+<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/pave-3d.js'></script>
 <style type='text/css'>
 body {
 	perspective: 800px;
 	perspective-origin: 50% 100px;
 }
-pave-simple, cylindre-simple {
-	margin-left: 8cm;
-	margin-top: 2cm;
-	animation: spin-horizontal 8s infinite linear;
+pave-3d {
+	width: 8em;
+	height: 3em;
+	color: wheat;
+	border: solid 4px var(--text-color);
+	background-color: #F0F8;
+	--depth: 6cm;
 }
 /*
 	animation: spin-horizontal 8s infinite linear;
@@ -28,159 +28,6 @@ pave-simple, cylindre-simple {
 	transform: rotateX(90deg);
 	background-image: radial-gradient(circle, red 1em, blue);
 */
-pave-simple, cylindre-simple {
-	/* propriétés modifiables */
-	width: 16em;
-	height: 12em;
-	--depth: 8em;
-	background-color: #C0C4;
-	color: var(--text-color);
-	/* ------ */
-	border-style: none;
-	display: inline-block;
-	transform-style: preserve-3d;
-	padding: 0;
-	text-align: center;
-	background-position: center;
-	background-size: contain;
-}
-pave-simple:before, pave-simple:after, pave-simple >*:nth-child(1), pave-simple >*:nth-child(1):before, pave-simple >*:nth-child(1):after,
-cylindre-simple:after, cylindre-simple >*, cylindre-simple >*:before, cylindre-simple >*:after {
-	/* valeurs par défaut à adapter */
-	width: inherit;
-	height: inherit;
-	top: 0;
-	left: 0;
-	transform-origin: center center;
-	/* valeurs communes */
-	content: "";
-	display: inline-block;
-	position: absolute;
-	border: none;
-	margin: 0;
-	text-align: inherit;
-	color: inherit;
-	background: inherit;
-	background-position: center;
-	background-size: contain;
-}
-pave-simple >*:nth-child(1) {
-	transform-style: preserve-3d;
-	transform: translateZ(calc(-1* var(--depth)));
-}
-pave-simple:before, pave-simple:after {
-	left: calc(-0.5* var(--depth));
-	content: "";
-	width: var(--depth);
-	transform: rotateY(90deg) translateX(50%);
-}
-pave-simple:after { left: calc(100% - 0.5* var(--depth)); }
-pave-simple >*:nth-child(1):before, pave-simple >*:nth-child(1):after {
-	content: "";
-	width: 100%;
-	height: var(--depth);
-	left: 0%;
-	top: calc(-0.5* var(--depth));
-	transform: rotateX(90deg) translateY(calc(0.5* var(--depth)));
-}
-pave-simple >*:nth-child(1):after { top: calc(100% - 0.5* var(--depth)); }
-
-cylindre-simple {
-	/* propriétés modifiables */
-	height: 16em;
-	/* ------ */
-	border-radius: 50%;
-}
-cylindre-simple:after {
-	transform: translateZ(calc(-1* var(--depth)));
-	border-radius: 50%;
-}
-cylindre-simple-va >* {
-	transform-style: preserve-3d;
-	height: 6.5%;
-	width: var(--depth);
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(-90deg);
-	top: 46.75%;
-	left: 25%;
-}
-cylindre-simple >* {
-	transform-style: preserve-3d;
-	height: var(--depth);
-	width: 6.5%;
-	top: 25%;
-	left: 46.75%;
-	transform: translateZ(calc(-0.5* var(--depth))) translateY(100%) rotateX(-90deg) rotateY(45deg);
-}
-cylindre-simple >*:before, cylindre-simple >*:after {
-	width: 100%;
-	height: 100%;
-	top: 0;
-}
-cylindre-simple >*:before {
-	transform-origin: center left;
-	left: 100%;
-	transform: rotateY(7.5deg);
-}
-cylindre-simple >*:after {
-	transform-origin: center right;
-	left: -100%;
-	transform: rotateY(-7.5deg);
-}
-cylindre-simple-va >*:before {
-	transform-origin: top center;
-	top: 100%;
-	transform: rotateX(7.5deg);
-}
-cylindre-simple-va >*:after {
-	transform-origin: bottom center;
-	top: -100%;
-	transform: rotateX(-7.5deg);
-}
-/*
-cylindre-simple >*:nth-child(1) {
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(-90deg);
-	left: 75%;
-}
-cylindre-simple >*:nth-child(2) {
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg);
-	left: -25%;
-}
-cylindre-simple >*:nth-child(3) {
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg) rotateX(90deg);
-	top: 96.75%;
-	left: 25%;
-}
-cylindre-simple >*:nth-child(4) {
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg) rotateX(-90deg);
-	top: -3.25%;
-	left: 25%;
-}
-cylindre-simple >*:nth-child(5) {
-	transform: translateZ(calc(-0.5* var(--depth))) rotateY(90deg) rotateX(-45deg);
-	top: 9.25%;
-	left: 12.5%;
-}
-	left: 25%;
-	transform: rotateY(90deg);
-cylindre-simple >*:nth-child(1){ transform: translateY(50%); }
-cylindre-simple >*:nth-child(2){ transform: rotateZ(22.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(3){ transform: rotateZ(45deg) translateY(50%); }
-cylindre-simple >*:nth-child(4){ transform: rotateZ(67.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(5){ transform: rotateZ(90deg) translateY(50%); }
-cylindre-simple >*:nth-child(6){ transform: rotateZ(112.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(7){ transform: rotateZ(135deg) translateY(50%); }
-cylindre-simple >*:nth-child(8){ transform: rotateZ(157.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(9){ transform: rotateZ(180deg) translateY(50%); }
-cylindre-simple >*:nth-child(10){ transform: rotateZ(202.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(11){ transform: rotateZ(225deg) translateY(50%); }
-cylindre-simple >*:nth-child(12){ transform: rotateZ(247.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(13){ transform: rotateZ(270deg) translateY(50%); }
-cylindre-simple >*:nth-child(14){ transform: rotateZ(292.5deg) translateY(50%); }
-cylindre-simple >*:nth-child(15){ transform: rotateZ(315deg) translateY(50%); }
-cylindre-simple >*:nth-child(16){ transform: rotateZ(337.5deg) translateY(50%); }
-*/
 </style></head><body>
-<cylindre-simple class='mesure'>
-	<p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p><p></p></cylindre-simple>
-<pave-simple><p></p></pave-simple>
+	<pave-3d><p>a</p><p>b</p></pave-3d>
 </body></html>
