--- a/pave.html
+++ b/pave.html
@@ -15,24 +15,25 @@ body {
 	perspective: 800px;
 	perspective-origin: 50% 100px;
 }
-boul-3d {
+boul-3d, cyld-3d {
 	width: 6cm;
 	height: 9cm;
-	color: wheat;
+	color: maroon;
 	border: solid 4px maroon;
 	background-color: #F0F2;
 	margin-left: 20em;
 	margin-top: 10em;
 	--depth: 4cm;
-	transform: rotateX(0deg);
+	transform: rotateY(90deg);
 }
 /*
 	animation: spin-horizontal 8s infinite linear;
 	animation: spin-vertical 8s infinite linear;
-	transform: rotateX(60deg);
+	transform: rotateY(40deg);
+	transform: rotateX(-90deg);
 	transform: rotateX(90deg);
 	background-image: radial-gradient(circle, red 1em, blue);
 */
 </style></head><body>
-	<boul-3d> </boul-3d>
+	<boul-3d></boul-3d>
 </body></html>
