--- a/pave.html
+++ b/pave.html
@@ -8,28 +8,30 @@
 <meta name='link' content='o'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave-d.css'/>
+<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
 <script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/pave-3d.js'></script>
 <style type='text/css'>
 body {
 	perspective: 800px;
 	perspective-origin: 50% 100px;
 }
-boul-3d, cyld-3d {
-	width: 6cm;
-	height: 9cm;
+boul-3d {
+	width: 20cm;
+	height: 6cm;
+	--depth: 2cm;
 	color: maroon;
 	border: solid 4px maroon;
-	background-color: #F0F2;
-	margin-left: 20em;
-	margin-top: 10em;
-	--depth: 4cm;
-	transform: rotateY(90deg);
+	background-color: #B0B6;
+	margin-left: 5em;
+	margin-top: 2em;
+	transform: rotateY(-0deg);
 }
 /*
 	animation: spin-horizontal 8s infinite linear;
 	animation: spin-vertical 8s infinite linear;
-	transform: rotateY(40deg);
+	transform: rotateX(-80deg) rotateZ(90deg);
+	transform: rotateY(-180deg);
+	transform: rotateY(60deg);
 	transform: rotateX(-90deg);
 	transform: rotateX(90deg);
 	background-image: radial-gradient(circle, red 1em, blue);
