--- a/pave.html
+++ b/pave.html
@@ -8,28 +8,35 @@
 <meta name='link' content='o'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
 <script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/pave-3d.js'></script>
 <style type='text/css'>
 body {
 	perspective: 800px;
 	perspective-origin: 50% 100px;
 }
-boul-3d {
-	width: 20cm;
-	height: 6cm;
+boul-3d, cube-3d {
+	width: 12em;
+	height: 20cm;
 	--depth: 2cm;
-	color: maroon;
+	color: ivory;
 	border: solid 4px maroon;
-	background-color: #B0B6;
 	margin-left: 5em;
 	margin-top: 2em;
-	transform: rotateY(-0deg);
+	transform: rotateY(60deg);
+}
+cube-3d.mesure {
+	background:
+		repeating-linear-gradient(90deg, transparent 0.9em, var(--text-color) 0.9em 1em, transparent 1em 1.9em),
+		repeating-linear-gradient(90deg, transparent 4.8em, var(--text-color) 4.8em 5em, transparent 5em 9.8em),
+		repeating-linear-gradient(transparent 0.9em, var(--text-color) 0.9em 1em, transparent 1em 1.9em),
+		repeating-linear-gradient(skyblue 4.8em, var(--text-color) 4.8em 5em, wheat 5em 9.8em);
 }
 /*
 	animation: spin-horizontal 8s infinite linear;
 	animation: spin-vertical 8s infinite linear;
 	transform: rotateX(-80deg) rotateZ(90deg);
+	transform: rotateY(-45deg) rotateX(-30deg);
+	transform: rotateX(-30deg);
 	transform: rotateY(-180deg);
 	transform: rotateY(60deg);
 	transform: rotateX(-90deg);
@@ -37,5 +44,5 @@ boul-3d {
 	background-image: radial-gradient(circle, red 1em, blue);
 */
 </style></head><body>
-	<boul-3d></boul-3d>
+	<cube-3d class='o'><p>a</p><p>b</p><p>c</p><p>d</p><p>e</p><p>f</p></cube-3d>
 </body></html>
