--- a/pave.html
+++ b/pave.html
@@ -16,16 +16,16 @@ body {
 	perspective-origin: 50% 100px;
 }
 test-3d, boul-3d, cyld-3d, bevl-3d {
-	width: 10em;
-	height: 19em;
+	width: 16em;
+	height: 29em;
 	--depth: 4em;
 	color: ivory;
 	border: solid 4px maroon;
 	background-color: #8046;
 	margin-left: 10em;
 	margin-top: 2em;
-	border-radius: 4%;
-	animation: spin-horizontal 8s infinite linear;
+	border-radius: 23%;
+	transform: rotateX(-90deg);
 }
 /*
 	animation: spin-horizontal 8s infinite linear;
@@ -47,7 +47,8 @@ test-3d.mesure {
 }
 	<cyld-3d> </cyld-3d>
 	<boul-3d> </boul-3d>
+	<bevl-3d> </bevl-3d>
 */
 </style></head><body>
-	<bevl-3d> </bevl-3d>
+	<test-3d> </test-3d>
 </body></html>
